# distribuidos-tp-money-laundering-analysis

./: .gitignore  Makefile  README.md  config.py  config.yaml  dev.sh  docker-compose.yaml  gen_compose.py  ideas.md  make_report  pyproject.toml
.data/: accounts42.csv  transactions100.csv
doc/: .$scratchpad.drawio.dtmp  competing-to-affinity-roadmap.md  eof-redesign.md  ft-dedup-checkpoint.md  informe.md  scratchpad.drawio
scripts/: cfg.py  diag_uc3_counts.py  diagnose_i2_wedge.py  diagnose_uc3_dup.py  drain_existing.py  ft_common.py  ft_e2e.py  ft_perf_bench.py  gen_compose.py  gen_input_output.py  investigate_stalls.py  plot_ft_perf.py  repro_highckpt_wedge.py  repro_recovery.py  repro_wedge.py  rerun_failed.py  resilience_demo.sh  scalability_e2e.py  uc3_ground_truth.py
src/: __init__.py
test/: README.md  _fakes.py  cfg.py  conftest.py  gen_demo_files.py  gen_input_output.py  test_chaos_select.py  test_checkpoint_store.py  test_checkpointer.py  test_connection.py  test_deduplicator.py  test_derived_stamping.py  test_fault_injection.py  test_gateway_per_client_delivery.py  test_heartbeat_client.py  test_message_identity.py  test_multi_shard_spill.py  test_persistent_spill.py  test_retrying_conversion_api.py  test_ring_aggregate.py  test_ring_completion.py  test_ring_group_by.py  test_ring_merge.py  test_ring_node_abort.py  test_stamping_mom.py  test_supervisor_election.py  test_supervisor_protocol.py  test_supervisor_registry.py  test_supervisor_reviver.py  test_supervisor_server.py  test_supervisor_tui.py  test_uc1.py  test_uc2.py  test_uc2_snapshot.py  (+8 more)
(+302 files in other folders)
