[project]
name = "tp-money-laundering-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "msgpack>=1.1.2",
    "numpy>=2.4.5",
    "pandas>=3.0.3",
    "pytest>=9.0.3",
    "requests>=2.32",
]
[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff.lint]
extend-select = ["W505"] # docstrings largos

[tool.ruff.lint.pycodestyle]
max-doc-length = 72 # pep 8
